syntax = "proto3";
package poker;

option go_package = "./pb";

// 错误码
enum ErrorCode {
  SUCCESS                 = 0;   // 成功
  UNKNOWN                 = 1;   // 未知错误
  FAILED                  = 2;   // 失败
  OPEN_FILE_FAILED        = 3;   // 打开文件失败
  PARSE_FAILED            = 4;   // 解析失败
  CONFIG_NOT_FOUND        = 5;   // 配置文件不存在
  CONNECT_FAILED          = 6;   // 网络连接失败
  PING_FAILED             = 7;   // ping失败
  CLIENT_NOT_FOUND        = 8;   // 客户端未找到
  FUNC_NOT_FOUND          = 9;   // 函数未找到
  ACTOR_ID_NOT_FOUND      = 10;  // Actor ID未找到
  SEND_TYPE_NOT_SUPPORTED = 11;  // 发送类型不支持
  ACTOR_NOT_SUPPORTED     = 12;  // Actor未找到
  SUBSCRIBE_FAILED        = 13;  // 订阅失败
  MARSHAL_FAILED          = 14;  // 序列化失败
  UNMARSHAL_FAILED        = 15;  // 反序列化失败
  REQUEST_FAIELD          = 16;  // 请求失败
  PARAM_INVALID           = 17;  // 参数检查失败
  NODE_NOT_FOUND          = 18;  // 节点未找到
  MAX_SIZE_LIMIT          = 19;  // 超过最大限制
  MIN_SIZE_LIMIT          = 20;  // 小于最小限制
  READ_FAIELD             = 21;  // 读取失败
  WRITE_FAIELD            = 22;  // 写入失败
  TYPE_ASSERT_FAILED      = 23;  // 类型转换失败
  CMD_NOT_FOUND           = 24;  // 命令未找到
  TIME_OUT                = 25;  // 超时
  SYSTEM_CALL_FAILED      = 26;  // 系统调用失败
  TYPE_NOT_SUPPORTED      = 27;  // 类型不支持
  PLAYER_NOT_FOUND        = 28;  // 玩家未找到
  NIL_POINTER             = 29;  // 空指针异常

  // game错误码
  GAME_PROP_NOT_ENOUGH      = 500;  // 游戏道具不足
  GAME_PLAYER_NOT_LOGIN     = 501;  // 玩家未登录
  GAME_PLAYER_IN_OTHER_GAME = 502;  // 玩家已在其他游戏中
  GAME_PLAYER_NOT_IN_ROOM   = 503;  // 玩家未在游戏中

  // db错误码
  DB_TEXAS_GAME_DATA_NOT_FOUND = 2000;  // 数据不存在

  // 德州扑克错误码
  TEXAS_ROOM_NOT_FOUND           = 10000;  // 德州房间未找到
  TEXAS_PLAYER_NOT_IN_ROOM       = 10001;  // 德州玩家未找到
  TEXAS_PLAYER_IN_GAME           = 10002;  // 德州玩家已在游戏中
  TEXAS_ROOM_IS_FULL             = 10003;  // 德州房间已满
  TEXAS_CHIPS_NOT_ENOUGH         = 10004;  // 德州筹码不足
  TEXAS_PLAYER_SIT_DOWN_REPEATED = 10005;  // 德州玩家已坐下
  TEXAS_CHAIR_HAS_OCCUPIED       = 10006;  // 德州座位已被占用
  TEXAS_PLAYER_HAS_STAND_UP      = 10007;  // 德州玩家未坐下
  TEXAS_PLAYER_HAS_ALL_IN        = 10008;  // 德州玩家已全下
  TEXAS_PLAYER_HAS_FOLD          = 10009;  // 德州玩家已弃牌

  // rummy错误码
  RUMMY_ROOM_NOT_FOUND        = 11000;  // rummy房间未找到
  RUMMY_PLAYER_NOT_IN_ROOM    = 11001;  // rummy玩家未找到
  RUMMY_PLAYER_NOT_PLAY       = 11002;  // rummy玩家未在游戏中
  RUMMY_PLAYER_DATA_INVAILD   = 11003;  // rummy玩家提交数据与服务端不匹配
  RUMMY_PLAYER_STEP_INVAILD   = 11004;  // 非当前玩家回合
  RUMMY_PLAYER_ACTION_INVAILD = 11005;  // 非当前玩家回合可执行操作
  RUMMY_PLAYER_FRAUD          = 11006;  //炸胡
  RUMMY_PLAYER_GAMEING        = 11007;  //游戏未结束
  RUMMY_ROOM_FULL             = 11008;  //房间座位已满
}